--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@uidotdev/usehooks": "^2.4.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-magic-motion": "^1.1.2",
     "react-router-dom": "^6.23.1"
   },
